--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
     padding: 0;
     text-align: center;
     background-color: #fff;
-    max-width: 700px;
+    max-width: 800px;
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     font-size: large;
 }
 
@@ -28,8 +28,9 @@ p {
 /* Estilo para o formulário */
 form {
     background-color: #fff;
-    max-width: 700px;
+    max-width: 750px;
     margin: 20px auto;
+    text-align: center;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -41,6 +42,7 @@ label {
     margin: 10px 10px 10px 0px;
     font-weight: bold;
     text-align: right;
+    text-align: left;
 }
 
 /* Estilo para os botões de opção */
@@ -80,11 +82,17 @@ button:hover {
     text-align: center;
 }
 
+#mensagem_final {
+    font-style: italic;
+    color: #333;
+    font-size: large;
+}
+
 .quadrado-verde {
     width: 25px;
     height: 20px;
     display: inline-block;
-    background-color: green; /* Cor verde, você pode ajustar conforme necessário */
+    background-color: green; 
     margin-top: 5px;
 }
 
@@ -92,7 +100,7 @@ button:hover {
     width: 25px;
     height: 20px;
     display: inline-block;
-    background-color: yellow; /* Cor amarela, você pode ajustar conforme necessário */
+    background-color: yellow; 
     margin-top: 5px;
 }
 
@@ -100,6 +108,6 @@ button:hover {
     width: 25px;
     height: 20px;
     display: inline-block;
-    background-color: red; /* Cor vermelha, você pode ajustar conforme necessário */
+    background-color: red; 
     margin-top: 5px;
 }
