--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ button:hover {
     text-align: center;
 }
 
-#mensagem_final {
+#mensagemFinal {
     font-style: italic;
     color: #333;
     font-size: large;
