--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     font-size: large;
 }
 
+
 /* Estilo para o título "Teste" */
 h2 {
     color: #333;
@@ -86,6 +87,7 @@ button:hover {
     font-style: italic;
     color: #333;
     font-size: large;
+    font-weight: bold;
 }
 
 .quadrado-verde {
